# master-birder-paper

./: .env  .gitignore  README.md  generate_avibase_turtle.py  master-birder-avibase.session.sql  messy.notes.md  pyproject.toml
data/: AL25-family.csv  AL25-order-with-IDs.csv  AL25-order.csv  avibase.schema.mer  master_birder.db  taxmeon_test.db
notebooks/: avibase_db_setup.ipynb  db_notes.ipynb  jena_owl_processing.ipynb  load_data.ipynb  ontology_ncbitaxon.ipynb  owl_ontology_exploration.ipynb
phylo1/: .gitignore  1.download_genomes.sh  2.run_busco.sh  2.run_compleasm  2.run_compleasm.sh  3.extract_busco_genes.py  3.extract_busco_genes_revisited.OUT  3.extract_busco_genes_revisited.py  3.extract_compleasm_2.py  3.extract_compleasm_genes.py  4.alignments.sh  5.trim_alignments.OUT  5.trim_alignments.sh  6.concatenated_alignment.OUT  6.concatenated_alignment.py  7.build.bird_phylogeny.OUT  7.build.bird_phylogeny.sh  7.updated-iqtree.cmd.OUT  bird_3species.bionj  bird_3species.iqtree  setup_notes.md  sourceme
scripts/: extract_neornithes.py  extract_neornithes_robot.sh  jena_owl_processor.py  load_to_fuseki.py  process_ncbi_taxonomy.py  robot_with_memory.sh  test_jena_processing.py
site/: index.ttl  web-server.py
sparql/: 2.neorthines_with_parentage_lite.sparql  3.2.discovery.sparql  3.neorthines_manually_created.sparql  4.neorthines_adjustments.sparql  avibase-instances.ttl  create.ncbi-taxon-id-2-avibase-id.rdf  create.ncbi-taxon-id-2-avibase-id.sparql  create.ncbi-taxon-id-2-avibase-id.ttl  generate-avibase-instances.sparql  neorthines_hier.sparql  (+8 more)
(+34600 files in other folders)
