[project]
name = "master-birder-paper"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Ken Shih", email = "ken.shih@gmail.com"},
]
dependencies = ["pandas>=2.3.2", "numpy>=2.3.3", "matplotlib>=3.10.6", "jupyter>=1.1.1", "seaborn>=0.13.2"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "apache2"}


[tool.pdm]
distribution = false

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "black>=25.1.0",
    "flake8>=7.3.0",
]
